--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
 </head>
 <body>
     <h2 title="top">Are you looking for the recipes of some of your favourite meals,well you are in luck. <br>Welcome to the site where you can find those recipes</h2>
