--- a/home.html
+++ b/home.html
@@ -10,12 +10,12 @@
     <br>
     <p><b>MEALS</b></p>
     <ul>
-        <li><a href="../PROJECT/links/jollofrice.html">jollof rice</a></li>
-        <li><a href="../PROJECT/links/beans.html">beans</a></li>
-        <li><a href="../PROJECT/links/yam.html">boiled yam</a></li>
-        <li><a href="../PROJECT/links/noodles.html">indomie</a></li>
-        <li><a href="../PROJECT/links/jollofspaghetti.html">jollof spaghetti</a></li>
-        <li><a href="../PROJECT/links/boiledrice.html">boiled rice</a></li>
+        <li><a href="./links/jollofrice.html">jollof rice</a></li>
+        <li><a href="./links/beans.html">beans</a></li>
+        <li><a href="./links/yam.html">boiled yam</a></li>
+        <li><a href="./links/noodles.html">indomie</a></li>
+        <li><a href="./links/jollofspaghetti.html">jollof spaghetti</a></li>
+        <li><a href="./links/boiledrice.html">boiled rice</a></li>
     </ul>
     <h6><b>ABOUT</b></h6>
     <h6>This website is a test website i built using html. </h6>
